--- a/index.html
+++ b/index.html
@@ -4,29 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Portfolio </title>
 </head>
 
 
-<nav>
-     <div id=test1>
+<body>
+
+    <nav>
+
         <img src="logo.png" alt="logo">
-     </div>
-     
-     <div id=test2>
+
         <img src="Menu.png" alt="Menu hamburger">
-     </div>
 
 </nav>
 
-<body>
-
     <section id="header">
-     <div id=text-header>
+     <div class="text-header">
          <h2>WELCOME!</h2>
          <h3>Hi! I'm Remi a french junior UX/UI designer </h3>
-         
      </div>
     </section>
 
@@ -38,7 +37,6 @@
         </div>
         <div class="image">
             <img src="GoalUp.png" alt="GoalUp">
-
         </div>
     </section>
 
